--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "install-peers": "^1.0.3",
     "prettier": "^1.19.1"
   },
   "keywords": [
@@ -41,7 +39,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BasKalkman/BasKalkman.github.io"
+    "url": "https://github.com/BasKalkman/"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
