--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "makedocs": "rm docs/ -r && mv public/ docs/"
   },
   "repository": {
     "type": "git",
